Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.0.3 (unreleased)

  Silva 2.0.2

    Bugs fixed:

      - fixed 158384: can't add groups: title error issue

      - fixed 101174: When an id is in use on the Zope level, inform 
                      users accordingly

      - fixed 157010: anchors in links: # -> %23

      - fixed "excessive recursion" error when users click 'new version' 
        to make a new copy of a silva document to edit then click the
        browser's back button and click 'new version' again.

      - fixed 158381: Group objects should be removable even if the 
        groups service isn't installed.

      - adjusted the description in the add form of links, since that
        incorrectly indicated that absolute links would be checked.

  Silva 2.0.1

    Bugs fixed:

      - fixed wuw140: Incorrect caching of images.

      - fixed 150809: sidebar cache not invalidated when folder
        removed
    
      - creationdate is once again set on versioned content.

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.

      - Fixed the thumbnailing/caching bug. When a thumbnailed image
        was resized back to 100%, a copy was being made to make sure
        the modification date headers are newer. I changed this so
        only the modifcation date is updated, but no copy of the image
        is being made, instead the original image is used.

      - Removed extra <br/> tag when viewing codesources in kupu.

      - fix for bug 109008: wrong tooltip when hovering over version
        status link

      - importing a zexp file with the Silva root in there was
        failing, because a Zope 3 event got fired that tried to re-add
        'collection' to 'service_metadata' while this is already
        there. Added a check to SilvaMetadata (1.0.1) that fixes this.
