@@ -2093,8 +2093,11 @@ SilvaExternalSourceTool.prototype.getUrlAndContinue = function(id, handler) {
 
 SilvaExternalSourceTool.prototype.startExternalSourceAddEdit = function() {
     // you should not be allowed to add external sources inside 
-    // headers or table cells
+    // headers or table cells (but the cursor may be inside an ES title, which is an H4.)
     var selNode = this.editor.getSelectedNode();
+    if (selNode.tagName == 'H4' && selNode.parentNode.tagName == 'DIV' && selNode.parentNode.className=='externalsource') {
+      selNode = selNode.parentNode;
+    }
     var not_allowed_parent_tags = ['H1', 'H2', 'H3', 'H4', 'H5', 'H6'];
     for (i=0; i < not_allowed_parent_tags.length; i++){
         if (selNode.tagName == not_allowed_parent_tags[i]){
