@@ -5,6 +5,10 @@ Silva changes
 
   Silva 2.0.3 (unreleased)
 
+      - fixed a bug where clicking on the title of a code source in
+        a document, then attempting to save the parameters raised a
+        "code course cannot be in a header" error
+
   Silva 2.0.2
 
     Bugs fixed:
